# auto-leetcode

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh.md  pyproject.toml
src/auto_leetcode/: cli.py  config.py  errors.py  runner.py
src/auto_leetcode/ai/: claude_generator.py  openai_generator.py  prompt.py  protocol.py
src/auto_leetcode/leetcode/: client.py  parser.py  submitter.py
src/auto_leetcode/models/: problem.py  solution.py  submission.py
src/auto_leetcode/storage/: file_saver.py  json_repository.py  protocol.py
tests/unit/: test_config.py  test_parser.py  test_prompt.py  test_runner.py  test_storage.py  test_submitter.py
